2006-06-27

	* po/tr.po: fixed a typo which caused crash.

2006-06-26

	* src/gtkutils.[ch]: gtkut_tree_view_fast_clear(): new.
	* src/summaryview.c: made workarounds for the crash in GTK+ 2.8.x.

2006-06-25

	* libsylph/mh.c: mh_scan_tree_recursive(): win32: improved its
	  performance.
	  Don't scan virtual folders.

2006-06-25

	* src/summaryview.c: summary_execute_move(), summary_execute_copy():
	  removed redundant folder scan.
	* libsylph/mh.c: mh_scan_folder_full(): win32: supported non-unicode
	  platforms (not tested).

2006-06-23

	* libsylph/mh.c: mh_scan_folder_full(): win32: optimized scanning of
	  directory using FindFirstFile() / FindNextFile().

2006-06-16

	* src/folderview.c: folderview_menu_popup(): enable "Mark all read"
	  only when selected folder is opened in the case of IMAP4.

2006-06-16

	* libsylph/procmsg.[ch]
	  src/folderview.c: added "Mark all read" to the folder context menu.

2006-06-09

	* version 2.2.6

2006-06-08

	* src/textview.c: textview_write_link(): remove spaces from href
	  (fixes execution failure with ShellExecute() on Win32 and URI check).

2006-06-04

	* src/send_message.c: send_message_smtp(): added missing timeout
	  handling (thanks to Colin).

2006-06-01

	* libsylph/imap.c: support 8-bit literal (literal8) defined in RFC
	  3516.

2006-05-29

	* version 2.2.5

2006-05-26

	* libsylph/pop.c: pop3_lookup_next(): increment
	  Pop3Session::cur_total_bytes too when deleting expired messages.

2006-05-26

	* src/foldersel.c: fixed a bug that bold face was disabled with
	  GLib 2.10 and Pango 1.12.

2006-05-17

	* src/main.c: fixed execution failure when using accessibility module.
	* libsylph/codeconv.c: conv_sjistojis(): fixed character corruption
	  and buffer overflow when using half-width kana.

2006-05-09

	* src/summaryview.c: don't decrease new/unread count if zero.

2006-03-29

	* version 2.2.4

2006-03-27

	* src/prefs_common_dialog.c: made "RFC 2231" not translatable.

2006-03-27
