@@ -1,3 +1,8 @@
+2006-07-21
+
+	* src/summaryview.c: summary_filter_real(): fixed a bug that manual
+	  junk filtering didn't work when no filter rule exist.
+
 2006-06-27
 
 	* po/tr.po: fixed a typo which caused crash.
